--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -1,5 +1,5 @@
 name:          regions-monadsfd
-version:       0.1
+version:       0.1.0.1
 cabal-version: >=1.6
 build-type:    Simple
 license:       BSD3
@@ -17,8 +17,8 @@ source-repository head
 
 Library
   GHC-Options: -O2 -Wall -fno-warn-orphans
-  build-depends: unicode-symbols == 0.1.*
-               , transformers    >= 0.1.4 && < 0.2
-               , regions         == 0.1.*
-               , monads-fd       == 0.0.*
+  build-depends: base-unicode-symbols == 0.1.*
+               , transformers         >= 0.1.4 && < 0.2
+               , regions              == 0.1.*
+               , monads-fd            == 0.0.*
   exposed-modules: Control.Monad.Trans.Region.Instances.MonadsFD
