--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -8,7 +8,7 @@ copyright:     2009 Bas van Dijk
 author:        Bas van Dijk
 maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
 stability:     experimental
-category:      Control
+category:      Control, Monadic Regions
 synopsis:      Monads-fd instances for the RegionT monad transformer
 
 source-repository head
