--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -17,7 +17,7 @@ source-repository head
 
 Library
   GHC-Options: -O2 -Wall -fno-warn-orphans
-  build-depends: base-unicode-symbols == 0.1.*
+  build-depends: base-unicode-symbols >= 0.1.1 && < 0.2
                , transformers         >= 0.1.4 && < 0.2
                , regions              == 0.1.*
                , monads-fd            == 0.0.*
