--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -16,7 +16,7 @@ source-repository head
   Location: http://code.haskell.org/~basvandijk/code/regions-monadsfd
 
 Library
-  GHC-Options: -O2 -Wall -fno-warn-orphans
+  GHC-Options: -Wall -fno-warn-orphans
   build-depends: base-unicode-symbols >= 0.1.1 && < 0.2
                , transformers         >= 0.1.4 && < 0.2
                , regions              == 0.2.*
