Depend on regions-0.4.*
Ignore-this: 59e5ce1d02bcf517f0926508ecfdde23

darcs-hash:20100204083206-ae560-caceb49ab6e1ba58c87d5c44d7db18959eacbf1f.gz

--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -19,6 +19,6 @@ Library
   GHC-Options: -Wall -fno-warn-orphans
   build-depends: base-unicode-symbols >= 0.1.1 && < 0.2
                , transformers         >= 0.1.4 && < 0.2
-               , regions              >= 0.3.1 && < 0.4
+               , regions              == 0.4.*
                , monads-fd            == 0.0.*
   exposed-modules: Control.Monad.Trans.Region.Instances.MonadsFD
