--- a/regions-monadsfd.cabal
+++ b/regions-monadsfd.cabal
@@ -1,5 +1,5 @@
 name:          regions-monadsfd
-version:       0.3.1
+version:       0.3.1.1
 cabal-version: >=1.6
 build-type:    Simple
 license:       BSD3
@@ -17,8 +17,8 @@ source-repository head
 
 Library
   GHC-Options: -Wall -fno-warn-orphans
-  build-depends: base-unicode-symbols >= 0.1.1 && < 0.2
-               , transformers         >= 0.1.4 && < 0.2
-               , regions              == 0.4.*
-               , monads-fd            == 0.0.*
+  build-depends: base-unicode-symbols >= 0.1.1 && < 0.3
+               , transformers         >= 0.1.4 && < 0.3
+               , regions              >= 0.4   && < 0.6
+               , monads-fd            >= 0.0   && < 0.2
   exposed-modules: Control.Monad.Trans.Region.Instances.MonadsFD
